Adding infra to 05

--- a/05-orchestrated-agents-with-custom-openapi-tools/Dockerfile
+++ b/05-orchestrated-agents-with-custom-openapi-tools/Dockerfile
@@ -9,13 +9,13 @@ RUN apt-get update && apt-get install -y \
     && rm -rf /var/lib/apt/lists/*
 
 # Copy requirements first for better caching
-COPY 05-orchestrated-agents-with-custom-openapi-tools/aci_requirements.txt .
+COPY aci_requirements.txt .
 
 # Install Python dependencies
 RUN pip install --no-cache-dir -r aci_requirements.txt
 
 # Copy the FastAPI application
-COPY 05-orchestrated-agents-with-custom-openapi-tools/bank_transactions_api.py .
+COPY bank_transactions_api.py .
 
 # Expose the port the app runs on
 EXPOSE 80
